[tool.poetry]
name = "mgp"
version = "0.1.2"
description = "Memgraph's module for developing MAGE modules. Used only for type hinting!"
authors = ["MasterMedo <mislav.vuletic@gmail.com>"]
license = "Apache Software License (Apache2)"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
