[tool.poetry]
name = "mgp"
version = "1.0.0"
description = "Memgraph's module for developing MAGE modules. Used only for type hinting!"
authors = [
    "MasterMedo <mislav.vuletic@gmail.com>",
    "jbajic <jure.bajic@memgraph.io>",
    "katarinasupe <katarina.supe@memgraph.io>",
    "antejavor <ante.javor@memgraph.io>",
    "antaljanosbenjamin <benjamin.antal@memgraph.io>",
]
license = "Apache-2.0"
readme = "README.md"
include = ["mgp.py", "_mgp.py"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
